# swagger/v1/swagger.yaml
@@ -295,6 +295,11 @@ paths:
                           pow10multi: 0
       operationId: get-api-v1-sensors
       description: Get all sensors
+      parameters:
+        - schema:
+            type: string
+          in: query
+          name: device_uuid
     post:
       summary: Create a sensor
       tags:
@@ -878,7 +883,7 @@ paths:
                             name: Temperature
                             unit: C
                             pow10multi: -2
-                        sensor_value: null
+                        sensor_value: 0
                       - sensor:
                           id: 2
                           uuid: 123-123-000-002
@@ -888,7 +893,7 @@ paths:
                             name: Pressure
                             unit: Pa
                             pow10multi: -2
-                        sensor_value: null
+                        sensor_value: 0
                       - sensor:
                           id: 3
                           uuid: 123-123-000-003
@@ -898,7 +903,7 @@ paths:
                             name: Battery Level
                             unit: '%'
                             pow10multi: 0
-                        sensor_value: null
+                        sensor_value: 0
                       - sensor:
                           id: 1
                           uuid: 123-123-000-001
@@ -908,7 +913,7 @@ paths:
                             name: Temperature
                             unit: C
                             pow10multi: -2
-                        sensor_value: null
+                        sensor_value: 0
                       - sensor:
                           id: 2
                           uuid: 123-123-000-002
@@ -918,7 +923,7 @@ paths:
                             name: Pressure
                             unit: Pa
                             pow10multi: -2
-                        sensor_value: null
+                        sensor_value: 0
                       - sensor:
                           id: 3
                           uuid: 123-123-000-003
@@ -928,7 +933,7 @@ paths:
                             name: Battery Level
                             unit: '%'
                             pow10multi: 0
-                        sensor_value: null
+                        sensor_value: 0
                       - sensor:
                           id: 1
                           uuid: 123-123-000-001
@@ -938,7 +943,7 @@ paths:
                             name: Temperature
                             unit: C
                             pow10multi: -2
-                        sensor_value: null
+                        sensor_value: 0
                       - sensor:
                           id: 2
                           uuid: 123-123-000-002
@@ -948,7 +953,7 @@ paths:
                             name: Pressure
                             unit: Pa
                             pow10multi: -2
-                        sensor_value: null
+                        sensor_value: 0
                       - sensor:
                           id: 3
                           uuid: 123-123-000-003
@@ -958,7 +963,7 @@ paths:
                             name: Battery Level
                             unit: '%'
                             pow10multi: 0
-                        sensor_value: null
+                        sensor_value: 0
                       - sensor:
                           id: 1
                           uuid: 123-123-000-001
@@ -968,7 +973,7 @@ paths:
                             name: Temperature
                             unit: C
                             pow10multi: -2
-                        sensor_value: null
+                        sensor_value: 0
                       - sensor:
                           id: 2
                           uuid: 123-123-000-002
@@ -978,7 +983,7 @@ paths:
                             name: Pressure
                             unit: Pa
                             pow10multi: -2
-                        sensor_value: null
+                        sensor_value: 0
                       - sensor:
                           id: 3
                           uuid: 123-123-000-003
@@ -988,7 +993,7 @@ paths:
                             name: Battery Level
                             unit: '%'
                             pow10multi: 0
-                        sensor_value: null
+                        sensor_value: 0
                       - sensor:
                           id: 1
                           uuid: 123-123-000-001
@@ -998,7 +1003,7 @@ paths:
                             name: Temperature
                             unit: C
                             pow10multi: -2
-                        sensor_value: null
+                        sensor_value: 0
                       - sensor:
                           id: 2
                           uuid: 123-123-000-002
@@ -1008,7 +1013,7 @@ paths:
                             name: Pressure
                             unit: Pa
                             pow10multi: -2
-                        sensor_value: null
+                        sensor_value: 0
                       - sensor:
                           id: 3
                           uuid: 123-123-000-003
@@ -1018,7 +1023,7 @@ paths:
                             name: Battery Level
                             unit: '%'
                             pow10multi: 0
-                        sensor_value: null
+                        sensor_value: 0
                       - sensor:
                           id: 1
                           uuid: 123-123-000-001
@@ -1028,7 +1033,7 @@ paths:
                             name: Temperature
                             unit: C
                             pow10multi: -2
-                        sensor_value: null
+                        sensor_value: 0
                       - sensor:
                           id: 2
                           uuid: 123-123-000-002
@@ -1038,7 +1043,7 @@ paths:
                             name: Pressure
                             unit: Pa
                             pow10multi: -2
-                        sensor_value: null
+                        sensor_value: 0
                       - sensor:
                           id: 3
                           uuid: 123-123-000-003
@@ -1048,7 +1053,7 @@ paths:
                             name: Battery Level
                             unit: '%'
                             pow10multi: 0
-                        sensor_value: null
+                        sensor_value: 0
                       - sensor:
                           id: 1
                           uuid: 123-123-000-001
@@ -1058,7 +1063,7 @@ paths:
                             name: Temperature
                             unit: C
                             pow10multi: -2
-                        sensor_value: null
+                        sensor_value: 0
                       - sensor:
                           id: 2
                           uuid: 123-123-000-002
@@ -1068,7 +1073,7 @@ paths:
                             name: Pressure
                             unit: Pa
                             pow10multi: -2
-                        sensor_value: null
+                        sensor_value: 0
                       - sensor:
                           id: 3
                           uuid: 123-123-000-003
@@ -1078,7 +1083,7 @@ paths:
                             name: Battery Level
                             unit: '%'
                             pow10multi: 0
-                        sensor_value: null
+                        sensor_value: 0
                       - sensor:
                           id: 1
                           uuid: 123-123-000-001
@@ -1088,7 +1093,7 @@ paths:
                             name: Temperature
                             unit: C
                             pow10multi: -2
-                        sensor_value: null
+                        sensor_value: 0
                       - sensor:
                           id: 2
                           uuid: 123-123-000-002
@@ -1098,7 +1103,7 @@ paths:
                             name: Pressure
                             unit: Pa
                             pow10multi: -2
-                        sensor_value: null
+                        sensor_value: 0
                       - sensor:
                           id: 3
                           uuid: 123-123-000-003
@@ -1108,7 +1113,7 @@ paths:
                             name: Battery Level
                             unit: '%'
                             pow10multi: 0
-                        sensor_value: null
+                        sensor_value: 0
                       - sensor:
                           id: 1
                           uuid: 123-123-000-001
@@ -1118,7 +1123,7 @@ paths:
                             name: Temperature
                             unit: C
                             pow10multi: -2
-                        sensor_value: null
+                        sensor_value: 0
                       - sensor:
                           id: 2
                           uuid: 123-123-000-002
@@ -1128,7 +1133,7 @@ paths:
                             name: Pressure
                             unit: Pa
                             pow10multi: -2
-                        sensor_value: null
+                        sensor_value: 0
                       - sensor:
                           id: 3
                           uuid: 123-123-000-003
@@ -1138,7 +1143,7 @@ paths:
                             name: Battery Level
                             unit: '%'
                             pow10multi: 0
-                        sensor_value: null
+                        sensor_value: 0
                       - sensor:
                           id: 1
                           uuid: 123-123-000-001
